@@ -2016,6 +2016,7 @@ public class Roi extends Object implements Cloneable, java.io.Serializable, Iter
 	 * the width to 0.0 and the ROI will be drawn using a
 	 * a 1 pixel stroke width regardless of the magnification.
 	 * @see #setDefaultStrokeWidth(double)
+	 * @see #setUnscalableStrokeWidth(double)	 
 	 * @see #setStrokeColor(Color)
 	 * @see ij.ImagePlus#setOverlay(ij.gui.Overlay)
 	 */
@@ -2046,6 +2047,10 @@ public class Roi extends Object implements Cloneable, java.io.Serializable, Iter
 		setStrokeWidth((float)strokeWidth);
 	}
 
+	/** Sets the width of the line used to draw this ROI and
+	 * prevents the width from increasing when the image
+	 * is zoomed.
+	*/
 	public void setUnscalableStrokeWidth(double strokeWidth) {
 		setStrokeWidth((float)strokeWidth);
 		scaleStrokeWidth = false;
@@ -2813,8 +2818,8 @@ public class Roi extends Object implements Cloneable, java.io.Serializable, Iter
 	/** Returns a hashcode for this Roi that typically changes
 		if it is moved, even though it is still the same object. */
 	public int getHashCode() {
-		return hashCode() ^ (new Double(getXBase()).hashCode()) ^
-			Integer.rotateRight(new Double(getYBase()).hashCode(),16);
+		return hashCode() ^ (Double.valueOf(getXBase()).hashCode()) ^
+			Integer.rotateRight(Double.valueOf(getYBase()).hashCode(),16);
 	}
 
 	public void setFlattenScale(double scale) {
